# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.150 2013/08/08 12:49:20 ssuominen Exp $

*emul-linux-x86-baselibs-20130224-r8 (08 Aug 2013)

  08 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +emul-linux-x86-baselibs-20130224-r8.ebuild, files/remove-native:
  libusb, libusbx, libusb-compat and udev were converted to the new multilib
  format.

*emul-linux-x86-baselibs-20130224-r7 (07 Aug 2013)

  07 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r6.ebuild,
  +emul-linux-x86-baselibs-20130224-r7.ebuild, files/remove-native:
  new revision featuring migrated expat

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  emul-linux-x86-baselibs-20130224-r6.ebuild:
  Fix libjpeg dependencies to gain libjpeg-turbo-1.3.0-r2 which has
  libjpeg.so.62

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r5.ebuild:
  old

*emul-linux-x86-baselibs-20130224-r6 (01 Aug 2013)

  01 Aug 2013; Samuli Suominen <ssuominen@gentoo.org>
  +emul-linux-x86-baselibs-20130224-r6.ebuild, files/remove-native:
  Restore libjpeg.so.8 back to emul- temporarily since we are in process of
  punting whole ABI from gentoo-x86.

*emul-linux-x86-baselibs-20130224-r5 (01 Aug 2013)

  01 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r4.ebuild,
  +emul-linux-x86-baselibs-20130224-r5.ebuild, files/remove-native:
  new revision featuring migratied jpeg6b and lib{raw,avc}1394

*emul-linux-x86-baselibs-20130224-r4 (31 Jul 2013)

  31 Jul 2013; Alexis Ballier <aballier@gentoo.org>
  -emul-linux-x86-baselibs-20130224-r3.ebuild,
  +emul-linux-x86-baselibs-20130224-r4.ebuild, files/remove-native:
  New revision featuring libpng12 and libjpegs migration. Also remove
  libpng15.pc that should not be used.
